--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/styled-engine-sc": "^7.1.0",
     "axios": "^1.9.0",
     "google-translator": "^1.0.1",
+    "gsap": "^3.13.0",
     "next": "15.3.2",
     "next-i18next": "^15.4.2",
     "react": "^19.0.0",
