--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@lottiefiles/dotlottie-react": "^0.14.3",
     "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
     "axios": "^1.9.0",
