--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "google-translator": "^1.0.1",
     "gsap": "^3.13.0",
     "next": "15.3.2",
